// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`samplesReducer Adds a new sample correctly 1`] = `
Object {
  "12345": Object {
    "complete": false,
    "error": false,
    "fileNames": Array [
      "features.tsv",
    ],
    "files": Object {
      "features.tsv": Object {
        "error": false,
        "mime": "",
        "name": "features.tsv",
        "objectKey": "",
        "size": 0,
        "success": false,
      },
    },
    "name": "test sample",
    "species": null,
    "type": null,
    "uuid": "12345",
  },
  "67890": Object {
    "complete": false,
    "error": false,
    "fileNames": Array [],
    "files": Object {},
    "name": "test sample 2",
    "species": null,
    "type": null,
    "uuid": "67890",
  },
  "ids": Array [
    "12345",
    "67890",
  ],
}
`;

exports[`samplesReducer Inserts a new sample correctly 1`] = `
Object {
  "12345": Object {
    "complete": false,
    "error": false,
    "fileNames": Array [
      "features.tsv",
    ],
    "files": Object {
      "features.tsv": Object {
        "error": false,
        "mime": "",
        "name": "features.tsv",
        "objectKey": "",
        "size": 0,
        "success": false,
      },
    },
    "name": "test sample",
    "species": null,
    "type": null,
    "uuid": "12345",
  },
  "ids": Array [
    "12345",
  ],
}
`;

exports[`samplesReducer Updates a sample correctly 1`] = `
Object {
  "12345": Object {
    "complete": false,
    "error": false,
    "fileNames": Array [
      "features.tsv",
    ],
    "files": Object {
      "features.tsv": Object {
        "error": false,
        "mime": "",
        "name": "features.tsv",
        "objectKey": "",
        "size": 0,
        "success": false,
      },
    },
    "name": "updated name",
    "species": null,
    "type": null,
    "uuid": "12345",
  },
  "ids": Array [
    "12345",
  ],
}
`;
